add password option for arguments and system property