@@ -9,4 +9,8 @@ set XDAG_OPTS="-t"
 # default JVM options
 set JAVA_OPTS="--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED -server -Xms1g -Xmx1g"
 
-java %JAVA_OPTS% -cp .;%XDAG_JARNAME% io.xdag.Bootstrap %*
+set JAVA_HEAPDUMP="-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./logs/xdag-heapdump"
+
+set JAVA_GC_LOG="-Xlog:gc*,gc+heap=trace,gc+age=trace,safepoint:file=./logs/xdag-gc-%t.log:time,level,tid,tags:filecount=8,filesize=10m"
+
+java %JAVA_OPTS% %JAVA_HEAPDUMP% %JAVA_GC_LOG% -cp .;%XDAG_JARNAME% io.xdag.Bootstrap %*
